--- a/site/community/index.html
+++ b/site/community/index.html
@@ -7,24 +7,16 @@ title: Community
 
 <h3 id="soucre-code">Source code</h3>
 
-The source code is available at <a href="https://github.com/apache/incubator-crail">https://github.com/apache/incubator-crail</a>
+The source code is available at <a href="https://github.com/craillabs/crail">https://github.com/craillabs/crail</a>
 
 <h3 id="howto-contribute"> How to contribute to Crail</h3>
 
 For any potential changes/proposals we recommend that you open a JIRA ticket to have a disucssion. After making necessary code changes, please open a pull request at Github, and update the JIRA.
 
-<h3 id="bug-tracking">Bug/JIRA tracking</h3>
+<h3 id="bug-tracking">Bug/Issues tracking</h3>
 
-<a href="https://issues.apache.org/jira/browse/CRAIL">https://issues.apache.org/jira/browse/CRAIL</a>
+<a href="https://github.com/craillabs/crail/issues">https://github.com/craillabs/crail/issues</a>
 
-<h3 id="mailing-list">Mailing list</h3>
+<h3 id="mailing-list">[Retired] Mailing list</h3>
 
-<p>Please join the Crail developer mailing list for discussions and notifications. The list is at: <a href="mailto:dev@crail.incubator.apache.org">dev@crail.incubator.apache.org</a>.</p>
-
-<ul>
-<li><a href="mailto: dev-subscribe@crail.incubator.apache.org">Subscribe to List</a></li>
-<li><a href="mailto: dev-unsubscribe@crail.incubator.apache.org">Unsubscribe from List</a></li>
-<li><a href="http://mail-archives.apache.org/mod_mbox/crail-dev/">Archives</a></li>
-</ul>
-
-<p>To post to the list, it is necessary to subscribe to it.</p>
+<p><a href="http://mail-archives.apache.org/mod_mbox/crail-dev/">Archive</a></p>
