fix links, remove JIRA mention

--- a/site/community/index.html
+++ b/site/community/index.html
@@ -11,12 +11,12 @@ The source code is available at <a href="https://github.com/craillabs/crail">htt
 
 <h3 id="howto-contribute"> How to contribute to Crail</h3>
 
-For any potential changes/proposals we recommend that you open a JIRA ticket to have a disucssion. After making necessary code changes, please open a pull request at Github, and update the JIRA.
+For any potential changes/proposals we recommend that you open an issue or a PR at <a href="https://github.com/craillabs/crail">https://github.com/craillabs/crail</a>
 
 <h3 id="bug-tracking">Bug/Issues tracking</h3>
 
 <a href="https://github.com/craillabs/crail/issues">https://github.com/craillabs/crail/issues</a>
 
-<h3 id="mailing-list">[Retired] Mailing list</h3>
+<h3 id="mailing-list">Mailing list [Retired]</h3>
 
 <p><a href="http://mail-archives.apache.org/mod_mbox/crail-dev/">Archive</a></p>
